<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_orocos_kdl</name>
  <version>3.3.1</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>LGPL</license>
  <url>http://wiki.ros.org/python_orocos_kdl</url>
  <author>Ruben Smits</author>
  <author email="steven@openrobotics.org">Steven! Ragnarök</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>python3-sip</build_depend>

  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>python3-sip</exec_depend>

  <test_depend>python3-psutil</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
